--- a/index.html
+++ b/index.html
@@ -133,11 +133,7 @@ h1{
   width:120px;
   height:100%;
   pointer-events:none;
-  background:linear-gradient(
-    to right,
-    rgba(10,10,10,0),
-    rgba(10,10,10,1)
-  );
+  background:linear-gradient(to right,rgba(10,10,10,0),rgba(10,10,10,1));
 }
 
 .portfolio-carousel{
@@ -150,14 +146,8 @@ h1{
   scrollbar-color:#444 transparent;
 }
 
-.portfolio-carousel::-webkit-scrollbar{
-  height:6px;
-}
-
-.portfolio-carousel::-webkit-scrollbar-thumb{
-  background:#444;
-  border-radius:6px;
-}
+.portfolio-carousel::-webkit-scrollbar{height:6px}
+.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
 
 .project-card{
   min-width:460px;
@@ -213,9 +203,10 @@ h1{
   position:absolute;
   left:20px;
   top:0;
-  width:2px;
+  width:1px;
   height:0;
   background:linear-gradient(#fff,#777);
+  transition:height .6s cubic-bezier(.4,0,.2,1);
 }
 
 .timeline-item{
@@ -232,11 +223,13 @@ h1{
   transform:none;
 }
 
+/* 🔹 PUNTO CENTRADO EN CADA BLOQUE */
 .timeline-item::before{
   content:"";
   position:absolute;
   left:-44px;
-  top:8px;
+  top:50%;
+  transform:translateY(-50%);
   width:10px;
   height:10px;
   border-radius:50%;
@@ -422,8 +415,9 @@ const line=document.getElementById("timelineLine");
 
 window.addEventListener("scroll",()=>{
   const rect=timeline.getBoundingClientRect();
-  const visible=Math.min(window.innerHeight-rect.top,rect.height);
-  line.style.height=Math.max(0,visible)+"px";
+  const raw=Math.min(window.innerHeight-rect.top,rect.height);
+  const eased=raw*0.85;
+  line.style.height=Math.max(0,eased)+"px";
 });
 </script>
 
