--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ nav span{
   max-width:1100px;
 }
 
-/* ========= TITULOS DE SECCIÓN ========= */
+/* ========= TITULOS ========= */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
@@ -90,7 +90,7 @@ h1{
   color:#777;
 }
 
-/* ========= TEXT ========= */
+/* ========= ABOUT ========= */
 .section-block p{
   margin-top:8px;
   padding-left:8px;
@@ -101,10 +101,8 @@ h1{
   text-align:justify;
 }
 
-/* ========= ABOUT ========= */
 .about{
   display:flex;
-  align-items:flex-start;
   margin-top:12px;
 }
 
@@ -140,14 +138,20 @@ h1{
   display:flex;
   gap:48px;
   overflow-x:auto;
+  overflow-y:hidden;
   padding-bottom:20px;
-  scroll-behavior:smooth;
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
 }
 
-.portfolio-carousel::-webkit-scrollbar{height:6px}
-.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
+.portfolio-carousel::-webkit-scrollbar{
+  height:6px;
+}
+
+.portfolio-carousel::-webkit-scrollbar-thumb{
+  background:#444;
+  border-radius:6px;
+}
 
 .project-card{
   min-width:460px;
@@ -155,7 +159,7 @@ h1{
   color:inherit;
   opacity:0;
   transform:translateY(12px);
-  transition:opacity .8s ease, transform .8s ease;
+  transition:.8s ease;
 }
 
 .project-card.is-visible{
@@ -192,7 +196,7 @@ h1{
   text-transform:uppercase;
 }
 
-/* ========= CV TIMELINE ========= */
+/* ========= CV ========= */
 .timeline{
   position:relative;
   margin-top:60px;
@@ -206,7 +210,6 @@ h1{
   width:1px;
   height:0;
   background:linear-gradient(#fff,#777);
-  transition:height .25s ease-out; /* MÁS RÁPIDA */
 }
 
 .timeline-item{
@@ -244,15 +247,14 @@ h1{
 
 .timeline-card h3{
   font-size:18px;
-  font-weight:500;
   letter-spacing:.12em;
   text-transform:uppercase;
   margin-bottom:16px;
 }
 
 .timeline-card strong{
-  display:block;
   font-size:16px;
+  display:block;
 }
 
 .timeline-card span{
@@ -283,17 +285,7 @@ h1{
   <div class="section-block">
     <h1>Sobre mí</h1>
     <div class="about">
-      <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
-        continuado en la Universitat Politècnica de València y completado con un programa Erasmus
-        en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
-        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
-        desde la fase de análisis hasta la materialización.
-      </p>
+      <p>Ingeniero en diseño industrial de 24 años, con base en Valencia...</p>
       <img src="foto.jpg" alt="">
     </div>
   </div>
@@ -304,10 +296,10 @@ h1{
     <h1>Portfolio</h1>
 
     <div class="portfolio-wrapper">
-      <div class="portfolio-carousel">
+      <div class="portfolio-carousel" id="portfolioCarousel">
 
         <a href="node.html" class="project-card">
-          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
+          <div class="project-image"><img src="brazo1.jpg"></div>
           <div class="project-inner">
             <h2>NODE</h2>
             <span>Proyecto final de grado</span>
@@ -315,7 +307,7 @@ h1{
         </a>
 
         <a href="sixay.html" class="project-card">
-          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
+          <div class="project-image"><img src="reloj1.jpg"></div>
           <div class="project-inner">
             <h2>Sixay · Cómoda</h2>
             <span>Diseño de mobiliario</span>
@@ -323,7 +315,7 @@ h1{
         </a>
 
         <a href="exploracion.html" class="project-card">
-          <div class="project-image"><img src="secador2.jpg" alt=""></div>
+          <div class="project-image"><img src="secador2.jpg"></div>
           <div class="project-inner">
             <h2>Exploración material</h2>
             <span>Proyecto experimental</span>
@@ -366,29 +358,6 @@ h1{
         </div>
       </div>
 
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Programa Erasmus</strong>
-          <span>Londres</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Idiomas</h3>
-          <strong>Español · Inglés · Húngaro</strong>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Software</h3>
-          <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
-          <span>Fusion 360 · Sinutrain · 3ds Max</span>
-        </div>
-      </div>
-
     </div>
   </div>
 </section>
@@ -408,7 +377,7 @@ const observer=new IntersectionObserver(entries=>{
 document.querySelectorAll(".project-card,.timeline-item")
   .forEach(el=>observer.observe(el));
 
-/* TIMELINE LINE PROGRESS (MÁS DIRECTA) */
+/* TIMELINE LINE */
 const timeline=document.querySelector(".timeline");
 const line=document.getElementById("timelineLine");
 
@@ -417,6 +386,16 @@ window.addEventListener("scroll",()=>{
   const visible=Math.min(window.innerHeight-rect.top,rect.height);
   line.style.height=Math.max(0,visible)+"px";
 });
+
+/* 🟢 PORTFOLIO: SCROLL VERTICAL → HORIZONTAL */
+const carousel = document.getElementById("portfolioCarousel");
+
+carousel.addEventListener("wheel",(e)=>{
+  if (Math.abs(e.deltaY) > Math.abs(e.deltaX)) {
+    e.preventDefault();
+    carousel.scrollLeft += e.deltaY;
+  }
+},{ passive:false });
 </script>
 
 </body>
