--- a/index.html
+++ b/index.html
@@ -8,17 +8,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:"Inter",sans-serif;
-}
+*{margin:0;padding:0;box-sizing:border-box;font-family:"Inter",sans-serif}
 
 body{
   background:#0a0a0a;
   color:#f5f5f5;
-  overflow-y:scroll;
   scroll-snap-type:y mandatory;
 }
 
@@ -61,6 +55,12 @@ nav span{
   max-width:1100px;
 }
 
+/* 🔴 FIX CLAVE */
+.section.portfolio .section-block{
+  position:relative;
+}
+
+/* TITLES */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
@@ -68,18 +68,10 @@ h1{
 }
 
 /* HERO */
-.section.hero{
-  align-items:center;
-}
-
-.section.hero h1{
-  font-size:clamp(80px,7vw,140px);
-  margin-left:-4px;
-}
-
+.section.hero{align-items:center}
+.section.hero h1{font-size:clamp(80px,7vw,140px)}
 .hero-sub{
   margin-top:24px;
-  padding-left:4px;
   font-size:14px;
   letter-spacing:.25em;
   color:#777;
@@ -88,105 +80,53 @@ h1{
 /* ABOUT */
 .section-block p{
   margin-top:8px;
-  padding-left:8px;
   font-size:15px;
   color:#aaa;
   max-width:700px;
   line-height:1.6;
-  text-align:justify;
 }
 
-.about{
-  display:flex;
-  align-items:flex-start;
-  margin-top:12px;
-}
-
+.about{display:flex;margin-top:12px}
 .about img{
   width:300px;
   height:400px;
   margin-left:40px;
   object-fit:cover;
-  opacity:.9;
 }
 
 /* PORTFOLIO */
 .portfolio-wrapper{
-  position:relative;
   margin-top:32px;
   margin-left:8px;
   overflow:hidden;
   padding-right:120px;
 }
 
-.portfolio-wrapper::after{
-  content:"";
-  position:absolute;
-  top:0;
-  right:0;
-  width:120px;
-  height:100%;
-  pointer-events:none;
-  background:linear-gradient(to right,rgba(10,10,10,0),rgba(10,10,10,1));
-}
-
 .portfolio-carousel{
   display:flex;
   gap:48px;
   overflow-x:auto;
-  overflow-y:hidden;
   padding-bottom:20px;
-  scrollbar-width:thin;
-  scrollbar-color:#444 transparent;
 }
-
-.portfolio-carousel::-webkit-scrollbar{height:6px}
-.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
 
 .project-card{
   min-width:460px;
   text-decoration:none;
   color:inherit;
-  opacity:0;
-  transform:translateY(12px);
-  transition:.8s ease;
-}
-
-.project-card.is-visible{
-  opacity:1;
-  transform:none;
 }
 
 .project-image{
   height:260px;
   margin-bottom:20px;
-  overflow:hidden;
 }
 
 .project-image img{
   width:100%;
   height:100%;
   object-fit:cover;
-  transition:transform .4s ease;
 }
 
-.project-card:hover img{
-  transform:scale(1.03);
-}
-
-.project-inner h2{
-  font-size:28px;
-  font-weight:400;
-}
-
-.project-inner span{
-  font-size:12px;
-  letter-spacing:.18em;
-  color:#777;
-  text-transform:uppercase;
-}
-
-/* CV TIMELINE */
+/* CV */
 .timeline{
   position:relative;
   margin-top:60px;
@@ -199,58 +139,28 @@ h1{
   top:0;
   width:1px;
   height:0;
-  background:linear-gradient(#fff,#777);
-  transition:height .25s ease-out;
+  background:#fff;
 }
 
 .timeline-item{
-  position:relative;
   margin-bottom:80px;
-  max-width:520px;
-  opacity:0;
-  transform:translateY(20px);
-  transition:.8s ease;
-}
-
-.timeline-item.is-visible{
-  opacity:1;
-  transform:none;
 }
 
 .timeline-item::before{
   content:"";
   position:absolute;
-  left:-44px;
-  top:50%;
-  transform:translateY(-50%);
+  left:16px;
   width:10px;
   height:10px;
-  border-radius:50%;
   background:#fff;
+  border-radius:50%;
 }
 
 .timeline-card{
-  background:rgba(255,255,255,.04);
-  border:1px solid rgba(255,255,255,.08);
-  border-radius:20px;
+  margin-left:40px;
   padding:28px;
-}
-
-.timeline-card h3{
-  font-size:18px;
-  letter-spacing:.12em;
-  text-transform:uppercase;
-  margin-bottom:16px;
-}
-
-.timeline-card strong{
-  display:block;
-  font-size:16px;
-}
-
-.timeline-card span{
-  font-size:13px;
-  color:#888;
+  background:rgba(255,255,255,.04);
+  border-radius:20px;
 }
 </style>
 </head>
@@ -275,28 +185,34 @@ h1{
   <div class="section-block">
     <h1>Sobre mí</h1>
     <div class="about">
-      <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
-        continuado en la Universitat Politècnica de València y completado con un programa Erasmus
-        en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
-        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
-        desde la fase de análisis hasta la materialización.
-      </p>
-      <img src="foto.jpg" alt="">
+      <p>Ingeniero en diseño industrial con perfil técnico y enfoque ecléctico.</p>
+      <img src="foto.jpg">
     </div>
   </div>
 </section>
 
-<section class="section">
+<section class="section portfolio">
   <div class="section-block">
     <h1>Portfolio</h1>
+
     <div class="portfolio-wrapper">
-      <div class="portfolio-carousel" id="portfolioCarousel">
-        <!-- proyectos intactos -->
+      <div class="portfolio-carousel">
+
+        <a class="project-card">
+          <div class="project-image"><img src="brazo1.jpg"></div>
+          <h2>NODE</h2>
+        </a>
+
+        <a class="project-card">
+          <div class="project-image"><img src="reloj1.jpg"></div>
+          <h2>Sixay · Cómoda</h2>
+        </a>
+
+        <a class="project-card">
+          <div class="project-image"><img src="secador2.jpg"></div>
+          <h2>Exploración material</h2>
+        </a>
+
       </div>
     </div>
   </div>
@@ -305,47 +221,20 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
-
     <div class="timeline">
       <div class="timeline-line" id="timelineLine"></div>
-
-      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Grado en Ingeniería en Diseño Industrial</strong><span>Universitat Jaume I</span></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Grado en Ingeniería en Diseño Industrial</strong><span>Universitat Politècnica de València</span></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>Programa Erasmus</strong><span>Londres</span></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Idiomas</h3><strong>Español · Inglés · Húngaro</strong></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Software</h3><strong>Rhino · AutoCAD · Inventor · SolidWorks</strong><span>Fusion 360 · Sinutrain · 3ds Max</span></div></div>
-
+      <div class="timeline-item"><div class="timeline-card">UJI</div></div>
+      <div class="timeline-item"><div class="timeline-card">UPV</div></div>
+      <div class="timeline-item"><div class="timeline-card">Erasmus Londres</div></div>
     </div>
   </div>
 </section>
 
 <script>
 document.querySelectorAll("nav span").forEach((b,i)=>{
-  b.onclick=()=>document.querySelectorAll(".section")[i].scrollIntoView({behavior:"smooth"});
+  b.onclick=()=>document.querySelectorAll(".section")[i]
+    .scrollIntoView({behavior:"smooth"});
 });
-
-const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
-},{threshold:.2});
-
-document.querySelectorAll(".project-card,.timeline-item").forEach(el=>observer.observe(el));
-
-const timeline=document.querySelector(".timeline");
-const line=document.getElementById("timelineLine");
-
-window.addEventListener("scroll",()=>{
-  const rect=timeline.getBoundingClientRect();
-  const visible=Math.min(window.innerHeight-rect.top,rect.height);
-  line.style.height=Math.max(0,visible)+"px";
-});
-
-const carousel=document.getElementById("portfolioCarousel");
-carousel?.addEventListener("wheel",(e)=>{
-  if(Math.abs(e.deltaY)>Math.abs(e.deltaX)){
-    e.preventDefault();
-    carousel.scrollLeft+=e.deltaY;
-  }
-},{passive:false});
 </script>
 
 </body>
