--- a/index.html
+++ b/index.html
@@ -3,33 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Luis Blasco — Industrial Design</title>
+<title>Luis Blasco — Diseño Industrial</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:"Inter",sans-serif}
+/* RESET */
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:"Inter",sans-serif;
+}
 
+/* BODY */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
-  scroll-snap-type:y mandatory;
 }
 
 /* NAV */
 nav{
   position:fixed;
   top:0;
-  left:50%;
-  transform:translateX(-50%);
+  left:0;
   width:100%;
   height:80px;
   display:flex;
   justify-content:center;
   align-items:center;
   gap:50px;
-  background:rgba(10,10,10,.4);
-  backdrop-filter:blur(12px);
+  background:rgba(10,10,10,.6);
+  backdrop-filter:blur(10px);
   z-index:100;
 }
 
@@ -44,62 +49,52 @@ nav span{
 /* SECTIONS */
 .section{
   min-height:100vh;
-  scroll-snap-align:start;
-  display:flex;
-  padding:180px 10vw 160px 22vw;
+  padding:160px 12vw 120px;
 }
 
-.section-block{
-  position:sticky;
-  top:260px;
-  max-width:1100px;
-}
-
-/* 🔴 FIX CLAVE */
-.section.portfolio .section-block{
-  position:relative;
-}
-
-/* TITLES */
 h1{
-  font-size:clamp(70px,6vw,120px);
+  font-size:clamp(64px,6vw,120px);
   font-weight:500;
-  line-height:1.05;
+  margin-bottom:24px;
 }
 
 /* HERO */
-.section.hero{align-items:center}
-.section.hero h1{font-size:clamp(80px,7vw,140px)}
+.hero h1{
+  font-size:clamp(80px,7vw,140px);
+  line-height:1.05;
+}
+
 .hero-sub{
-  margin-top:24px;
   font-size:14px;
   letter-spacing:.25em;
   color:#777;
 }
 
 /* ABOUT */
-.section-block p{
-  margin-top:8px;
-  font-size:15px;
-  color:#aaa;
-  max-width:700px;
-  line-height:1.6;
+.about{
+  display:flex;
+  gap:40px;
+  max-width:1100px;
 }
 
-.about{display:flex;margin-top:12px}
+.about p{
+  font-size:15px;
+  line-height:1.6;
+  color:#aaa;
+  max-width:700px;
+}
+
 .about img{
-  width:300px;
-  height:400px;
-  margin-left:40px;
+  width:280px;
+  height:380px;
   object-fit:cover;
+  opacity:.9;
 }
 
 /* PORTFOLIO */
 .portfolio-wrapper{
-  margin-top:32px;
-  margin-left:8px;
+  margin-top:40px;
   overflow:hidden;
-  padding-right:120px;
 }
 
 .portfolio-carousel{
@@ -109,15 +104,24 @@ h1{
   padding-bottom:20px;
 }
 
+.portfolio-carousel::-webkit-scrollbar{
+  height:6px;
+}
+
+.portfolio-carousel::-webkit-scrollbar-thumb{
+  background:#444;
+  border-radius:6px;
+}
+
 .project-card{
-  min-width:460px;
+  min-width:420px;
   text-decoration:none;
   color:inherit;
 }
 
 .project-image{
   height:260px;
-  margin-bottom:20px;
+  margin-bottom:16px;
 }
 
 .project-image img{
@@ -126,30 +130,47 @@ h1{
   object-fit:cover;
 }
 
+.project-card h2{
+  font-size:26px;
+  font-weight:400;
+}
+
+.project-card span{
+  font-size:12px;
+  letter-spacing:.18em;
+  color:#777;
+  text-transform:uppercase;
+}
+
 /* CV */
 .timeline{
   position:relative;
-  margin-top:60px;
-  padding-left:60px;
+  margin-top:40px;
+  padding-left:40px;
+  max-width:700px;
 }
 
-.timeline-line{
+.timeline::before{
+  content:"";
   position:absolute;
-  left:20px;
+  left:0;
   top:0;
+  bottom:0;
   width:1px;
-  height:0;
-  background:#fff;
+  background:#555;
 }
 
 .timeline-item{
-  margin-bottom:80px;
+  position:relative;
+  margin-bottom:60px;
 }
 
 .timeline-item::before{
   content:"";
   position:absolute;
-  left:16px;
+  left:-5px;
+  top:50%;
+  transform:translateY(-50%);
   width:10px;
   height:10px;
   background:#fff;
@@ -157,10 +178,26 @@ h1{
 }
 
 .timeline-card{
-  margin-left:40px;
-  padding:28px;
+  padding:24px;
   background:rgba(255,255,255,.04);
-  border-radius:20px;
+  border-radius:16px;
+}
+
+.timeline-card h3{
+  font-size:18px;
+  letter-spacing:.12em;
+  text-transform:uppercase;
+  margin-bottom:12px;
+}
+
+.timeline-card strong{
+  font-size:16px;
+  display:block;
+}
+
+.timeline-card span{
+  font-size:13px;
+  color:#888;
 }
 </style>
 </head>
@@ -168,73 +205,118 @@ h1{
 <body>
 
 <nav>
-  <span data-i="0">Inicio</span>
-  <span data-i="1">Sobre mí</span>
-  <span data-i="2">Portfolio</span>
-  <span data-i="3">CV</span>
+  <span onclick="go(0)">Inicio</span>
+  <span onclick="go(1)">Sobre mí</span>
+  <span onclick="go(2)">Portfolio</span>
+  <span onclick="go(3)">CV</span>
 </nav>
 
 <section class="section hero">
-  <div class="section-block">
-    <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
-    <div class="hero-sub">Portfolio | Diseño industrial</div>
+  <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
+  <div class="hero-sub">Portfolio | Diseño industrial</div>
+</section>
+
+<section class="section">
+  <h1>Sobre mí</h1>
+  <div class="about">
+    <p>
+      Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico,
+      con formación técnica y sensibilidad por el proceso completo de diseño.
+      He cursado mis estudios en la Universitat Jaume I, continuado en la Universitat
+      Politècnica de València y completado un programa Erasmus en Londres.
+      Cuento además con formación profesional en electricidad, lo que refuerza
+      mi base técnica y mi manera de entender el diseño desde la viabilidad.
+    </p>
+    <img src="foto.jpg" alt="">
   </div>
 </section>
 
 <section class="section">
-  <div class="section-block">
-    <h1>Sobre mí</h1>
-    <div class="about">
-      <p>Ingeniero en diseño industrial con perfil técnico y enfoque ecléctico.</p>
-      <img src="foto.jpg">
+  <h1>Portfolio</h1>
+
+  <div class="portfolio-wrapper">
+    <div class="portfolio-carousel" id="carousel">
+
+      <a href="node.html" class="project-card">
+        <div class="project-image"><img src="brazo1.jpg"></div>
+        <h2>NODE</h2>
+        <span>Proyecto final de grado</span>
+      </a>
+
+      <a href="sixay.html" class="project-card">
+        <div class="project-image"><img src="reloj1.jpg"></div>
+        <h2>Sixay · Cómoda</h2>
+        <span>Diseño de mobiliario</span>
+      </a>
+
+      <a href="exploracion.html" class="project-card">
+        <div class="project-image"><img src="secador2.jpg"></div>
+        <h2>Exploración material</h2>
+        <span>Proyecto experimental</span>
+      </a>
+
     </div>
   </div>
 </section>
 
-<section class="section portfolio">
-  <div class="section-block">
-    <h1>Portfolio</h1>
+<section class="section">
+  <h1>CV</h1>
 
-    <div class="portfolio-wrapper">
-      <div class="portfolio-carousel">
+  <div class="timeline">
 
-        <a class="project-card">
-          <div class="project-image"><img src="brazo1.jpg"></div>
-          <h2>NODE</h2>
-        </a>
-
-        <a class="project-card">
-          <div class="project-image"><img src="reloj1.jpg"></div>
-          <h2>Sixay · Cómoda</h2>
-        </a>
-
-        <a class="project-card">
-          <div class="project-image"><img src="secador2.jpg"></div>
-          <h2>Exploración material</h2>
-        </a>
-
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <h3>Formación</h3>
+        <strong>Grado en Ingeniería en Diseño Industrial</strong>
+        <span>Universitat Jaume I</span>
       </div>
     </div>
-  </div>
-</section>
 
-<section class="section">
-  <div class="section-block">
-    <h1>CV</h1>
-    <div class="timeline">
-      <div class="timeline-line" id="timelineLine"></div>
-      <div class="timeline-item"><div class="timeline-card">UJI</div></div>
-      <div class="timeline-item"><div class="timeline-card">UPV</div></div>
-      <div class="timeline-item"><div class="timeline-card">Erasmus Londres</div></div>
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <h3>Formación</h3>
+        <strong>Grado en Ingeniería en Diseño Industrial</strong>
+        <span>Universitat Politècnica de València</span>
+      </div>
     </div>
+
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <h3>Formación</h3>
+        <strong>Programa Erasmus</strong>
+        <span>Londres</span>
+      </div>
+    </div>
+
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <h3>Idiomas</h3>
+        <strong>Español · Inglés · Húngaro</strong>
+      </div>
+    </div>
+
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <h3>Software</h3>
+        <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
+        <span>Fusion 360 · Sinutrain · 3ds Max</span>
+      </div>
+    </div>
+
   </div>
 </section>
 
 <script>
-document.querySelectorAll("nav span").forEach((b,i)=>{
-  b.onclick=()=>document.querySelectorAll(".section")[i]
-    .scrollIntoView({behavior:"smooth"});
-});
+function go(i){
+  document.querySelectorAll(".section")[i].scrollIntoView({behavior:"smooth"});
+}
+
+/* Scroll vertical → horizontal en portfolio */
+const carousel = document.getElementById("carousel");
+carousel.addEventListener("wheel", e=>{
+  e.preventDefault();
+  carousel.scrollLeft += e.deltaY;
+},{passive:false});
 </script>
 
 </body>
