--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Luis Blasco — Diseño Industrial</title>
+<title>Luis Blasco — Industrial Design</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
-/* RESET */
+
+/* ========= RESET ========= */
 *{
   margin:0;
   padding:0;
@@ -16,25 +17,28 @@
   font-family:"Inter",sans-serif;
 }
 
-/* BODY */
+/* ========= BODY ========= */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
+  overflow-y:scroll;
+  scroll-snap-type:y mandatory;
 }
 
-/* NAV */
+/* ========= NAV ========= */
 nav{
   position:fixed;
   top:0;
-  left:0;
+  left:50%;
+  transform:translateX(-50%);
   width:100%;
   height:80px;
   display:flex;
   justify-content:center;
   align-items:center;
   gap:50px;
-  background:rgba(10,10,10,.6);
-  backdrop-filter:blur(10px);
+  background:rgba(10,10,10,.4);
+  backdrop-filter:blur(12px);
   z-index:100;
 }
 
@@ -46,55 +50,90 @@ nav span{
   cursor:pointer;
 }
 
-/* SECTIONS */
+/* ========= SECTIONS ========= */
 .section{
   min-height:100vh;
-  padding:160px 12vw 120px;
+  scroll-snap-align:start;
+  display:flex;
+  justify-content:flex-start;
+  padding:180px 10vw 160px 22vw;
 }
 
+.section-block{
+  position:sticky;
+  top:260px;
+  max-width:1100px;
+}
+
+/* ========= TITULOS DE SECCIÓN ========= */
 h1{
-  font-size:clamp(64px,6vw,120px);
+  font-size:clamp(70px,6vw,120px);
   font-weight:500;
-  margin-bottom:24px;
-}
-
-/* HERO */
-.hero h1{
-  font-size:clamp(80px,7vw,140px);
   line-height:1.05;
 }
 
+/* ========= HERO ========= */
+.section.hero{
+  align-items:center;
+}
+
+.section.hero h1{
+  font-size:clamp(80px,7vw,140px);
+  margin-left:-4px;
+}
+
 .hero-sub{
+  margin-top:24px;
+  padding-left:4px;
   font-size:14px;
   letter-spacing:.25em;
   color:#777;
 }
 
-/* ABOUT */
-.about{
-  display:flex;
-  gap:40px;
-  max-width:1100px;
-}
-
-.about p{
+/* ========= TEXT ========= */
+.section-block p{
+  margin-top:8px;
+  padding-left:8px;
   font-size:15px;
-  line-height:1.6;
   color:#aaa;
   max-width:700px;
+  line-height:1.6;
+  text-align:justify;
+}
+
+/* ========= ABOUT ========= */
+.about{
+  display:flex;
+  align-items:flex-start;
+  margin-top:12px;
 }
 
 .about img{
-  width:280px;
-  height:380px;
+  width:300px;
+  height:400px;
+  margin-left:40px;
   object-fit:cover;
   opacity:.9;
 }
 
-/* PORTFOLIO */
+/* ========= PORTFOLIO ========= */
 .portfolio-wrapper{
-  margin-top:40px;
+  position:relative;
+  margin-top:32px;
+  margin-left:8px;
   overflow:hidden;
+  padding-right:120px;
+}
+
+.portfolio-wrapper::after{
+  content:"";
+  position:absolute;
+  top:0;
+  right:0;
+  width:120px;
+  height:100%;
+  pointer-events:none;
+  background:linear-gradient(to right,rgba(10,10,10,0),rgba(10,10,10,1));
 }
 
 .portfolio-carousel{
@@ -102,221 +141,282 @@ h1{
   gap:48px;
   overflow-x:auto;
   padding-bottom:20px;
+  scroll-behavior:smooth;
+  scrollbar-width:thin;
+  scrollbar-color:#444 transparent;
 }
 
-.portfolio-carousel::-webkit-scrollbar{
-  height:6px;
-}
-
-.portfolio-carousel::-webkit-scrollbar-thumb{
-  background:#444;
-  border-radius:6px;
-}
+.portfolio-carousel::-webkit-scrollbar{height:6px}
+.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
 
 .project-card{
-  min-width:420px;
+  min-width:460px;
   text-decoration:none;
   color:inherit;
+  opacity:0;
+  transform:translateY(12px);
+  transition:opacity .8s ease, transform .8s ease;
+}
+
+.project-card.is-visible{
+  opacity:1;
+  transform:none;
 }
 
 .project-image{
   height:260px;
-  margin-bottom:16px;
+  margin-bottom:20px;
+  overflow:hidden;
 }
 
 .project-image img{
   width:100%;
   height:100%;
   object-fit:cover;
+  transition:transform .4s ease;
 }
 
-.project-card h2{
-  font-size:26px;
+.project-card:hover img{
+  transform:scale(1.03);
+}
+
+.project-inner h2{
+  font-size:28px;
   font-weight:400;
 }
 
-.project-card span{
+.project-inner span{
   font-size:12px;
   letter-spacing:.18em;
   color:#777;
   text-transform:uppercase;
 }
 
-/* CV */
+/* ========= CV TIMELINE ========= */
 .timeline{
   position:relative;
-  margin-top:40px;
-  padding-left:40px;
-  max-width:700px;
+  margin-top:60px;
+  padding-left:60px;
 }
 
-.timeline::before{
-  content:"";
+.timeline-line{
   position:absolute;
-  left:0;
+  left:20px;
   top:0;
-  bottom:0;
   width:1px;
-  background:#555;
+  height:0;
+  background:linear-gradient(#fff,#777);
+  transition:height .25s ease-out; /* MÁS RÁPIDA */
 }
 
 .timeline-item{
   position:relative;
-  margin-bottom:60px;
+  margin-bottom:80px;
+  max-width:520px;
+  opacity:0;
+  transform:translateY(20px);
+  transition:.8s ease;
+}
+
+.timeline-item.is-visible{
+  opacity:1;
+  transform:none;
 }
 
 .timeline-item::before{
   content:"";
   position:absolute;
-  left:-5px;
+  left:-44px;
   top:50%;
   transform:translateY(-50%);
   width:10px;
   height:10px;
-  background:#fff;
   border-radius:50%;
+  background:#fff;
 }
 
 .timeline-card{
-  padding:24px;
   background:rgba(255,255,255,.04);
-  border-radius:16px;
+  border:1px solid rgba(255,255,255,.08);
+  border-radius:20px;
+  padding:28px;
 }
 
 .timeline-card h3{
   font-size:18px;
+  font-weight:500;
   letter-spacing:.12em;
   text-transform:uppercase;
-  margin-bottom:12px;
+  margin-bottom:16px;
 }
 
 .timeline-card strong{
-  font-size:16px;
   display:block;
+  font-size:16px;
 }
 
 .timeline-card span{
   font-size:13px;
   color:#888;
 }
+
 </style>
 </head>
 
 <body>
 
 <nav>
-  <span onclick="go(0)">Inicio</span>
-  <span onclick="go(1)">Sobre mí</span>
-  <span onclick="go(2)">Portfolio</span>
-  <span onclick="go(3)">CV</span>
+  <span data-i="0">Inicio</span>
+  <span data-i="1">Sobre mí</span>
+  <span data-i="2">Portfolio</span>
+  <span data-i="3">CV</span>
 </nav>
 
 <section class="section hero">
-  <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
-  <div class="hero-sub">Portfolio | Diseño industrial</div>
-</section>
-
-<section class="section">
-  <h1>Sobre mí</h1>
-  <div class="about">
-    <p>
-      Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico,
-      con formación técnica y sensibilidad por el proceso completo de diseño.
-      He cursado mis estudios en la Universitat Jaume I, continuado en la Universitat
-      Politècnica de València y completado un programa Erasmus en Londres.
-      Cuento además con formación profesional en electricidad, lo que refuerza
-      mi base técnica y mi manera de entender el diseño desde la viabilidad.
-    </p>
-    <img src="foto.jpg" alt="">
+  <div class="section-block">
+    <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
+    <div class="hero-sub">Portfolio | Diseño industrial</div>
   </div>
 </section>
 
 <section class="section">
-  <h1>Portfolio</h1>
-
-  <div class="portfolio-wrapper">
-    <div class="portfolio-carousel" id="carousel">
-
-      <a href="node.html" class="project-card">
-        <div class="project-image"><img src="brazo1.jpg"></div>
-        <h2>NODE</h2>
-        <span>Proyecto final de grado</span>
-      </a>
-
-      <a href="sixay.html" class="project-card">
-        <div class="project-image"><img src="reloj1.jpg"></div>
-        <h2>Sixay · Cómoda</h2>
-        <span>Diseño de mobiliario</span>
-      </a>
-
-      <a href="exploracion.html" class="project-card">
-        <div class="project-image"><img src="secador2.jpg"></div>
-        <h2>Exploración material</h2>
-        <span>Proyecto experimental</span>
-      </a>
-
+  <div class="section-block">
+    <h1>Sobre mí</h1>
+    <div class="about">
+      <p>
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
+        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
+        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
+        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
+        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
+        continuado en la Universitat Politècnica de València y completado con un programa Erasmus
+        en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
+        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
+        desde la fase de análisis hasta la materialización.
+      </p>
+      <img src="foto.jpg" alt="">
     </div>
   </div>
 </section>
 
 <section class="section">
-  <h1>CV</h1>
+  <div class="section-block">
+    <h1>Portfolio</h1>
 
-  <div class="timeline">
+    <div class="portfolio-wrapper">
+      <div class="portfolio-carousel">
 
-    <div class="timeline-item">
-      <div class="timeline-card">
-        <h3>Formación</h3>
-        <strong>Grado en Ingeniería en Diseño Industrial</strong>
-        <span>Universitat Jaume I</span>
+        <a href="node.html" class="project-card">
+          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>NODE</h2>
+            <span>Proyecto final de grado</span>
+          </div>
+        </a>
+
+        <a href="sixay.html" class="project-card">
+          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>Sixay · Cómoda</h2>
+            <span>Diseño de mobiliario</span>
+          </div>
+        </a>
+
+        <a href="exploracion.html" class="project-card">
+          <div class="project-image"><img src="secador2.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>Exploración material</h2>
+            <span>Proyecto experimental</span>
+          </div>
+        </a>
+
+        <a href="conceptual.html" class="project-card">
+          <div class="project-image"></div>
+          <div class="project-inner">
+            <h2>Proyecto conceptual</h2>
+            <span>Diseño de producto</span>
+          </div>
+        </a>
+
       </div>
     </div>
+  </div>
+</section>
 
-    <div class="timeline-item">
-      <div class="timeline-card">
-        <h3>Formación</h3>
-        <strong>Grado en Ingeniería en Diseño Industrial</strong>
-        <span>Universitat Politècnica de València</span>
+<section class="section">
+  <div class="section-block">
+    <h1>CV</h1>
+
+    <div class="timeline">
+      <div class="timeline-line" id="timelineLine"></div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Jaume I</span>
+        </div>
       </div>
-    </div>
 
-    <div class="timeline-item">
-      <div class="timeline-card">
-        <h3>Formación</h3>
-        <strong>Programa Erasmus</strong>
-        <span>Londres</span>
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Politècnica de València</span>
+        </div>
       </div>
-    </div>
 
-    <div class="timeline-item">
-      <div class="timeline-card">
-        <h3>Idiomas</h3>
-        <strong>Español · Inglés · Húngaro</strong>
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Programa Erasmus</strong>
+          <span>Londres</span>
+        </div>
       </div>
-    </div>
 
-    <div class="timeline-item">
-      <div class="timeline-card">
-        <h3>Software</h3>
-        <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
-        <span>Fusion 360 · Sinutrain · 3ds Max</span>
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Idiomas</h3>
+          <strong>Español · Inglés · Húngaro</strong>
+        </div>
       </div>
-    </div>
 
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Software</h3>
+          <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
+          <span>Fusion 360 · Sinutrain · 3ds Max</span>
+        </div>
+      </div>
+
+    </div>
   </div>
 </section>
 
 <script>
-function go(i){
-  document.querySelectorAll(".section")[i].scrollIntoView({behavior:"smooth"});
-}
+/* NAV */
+document.querySelectorAll("nav span").forEach((b,i)=>{
+  b.onclick=()=>document.querySelectorAll(".section")[i]
+    .scrollIntoView({behavior:"smooth"});
+});
 
-/* Scroll vertical → horizontal en portfolio */
-const carousel = document.getElementById("carousel");
-carousel.addEventListener("wheel", e=>{
-  e.preventDefault();
-  carousel.scrollLeft += e.deltaY;
-},{passive:false});
+/* OBSERVER */
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
+},{threshold:.2});
+
+document.querySelectorAll(".project-card,.timeline-item")
+  .forEach(el=>observer.observe(el));
+
+/* TIMELINE LINE PROGRESS (MÁS DIRECTA) */
+const timeline=document.querySelector(".timeline");
+const line=document.getElementById("timelineLine");
+
+window.addEventListener("scroll",()=>{
+  const rect=timeline.getBoundingClientRect();
+  const visible=Math.min(window.innerHeight-rect.top,rect.height);
+  line.style.height=Math.max(0,visible)+"px";
+});
 </script>
 
 </body>
